@@ -1,3 +1,7 @@
+2002-06-03  Marcus Brinkmann  <marcus@gnu.org>
+
+	* console.c (vcons_release): Fix last change.
+
 2002-06-02  Marcus Brinkmann  <marcus@gnu.org>
 
 	* console.c (vcons_lookup): Correct nesting.
